--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.8.3",
     "echarts": "^5.6.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
