--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,30 @@
-FROM node:20.18.3
+FROM node:20.18.3 AS builder
+
+ENV NODE_ENV build
 
 RUN apt update && apt install -y openssl procps
 
 USER node
 
-WORKDIR 
+WORKDIR /app
 
-CMD [ "tail", "-f", "/dev/null" ]
+COPY --chown=node:node . .
+
+RUN npx prisma generate && npm run build  
+
+FROM node:20.18.3 AS runner
+
+ENV NODE_ENV production
+
+USER node
+
+WORKDIR /app
+
+COPY --from=builder --chown=node:node /app/.env ./
+COPY --from=builder --chown=node:node /app/package*.json ./
+COPY --from=builder --chown=node:node /app/node_modules/ ./node_modules/
+COPY --from=builder --chown=node:node /app/dist/ ./dist/
+
+EXPOSE 3000
+
+CMD ["node", "dist/main.js"]
