--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.8.3",
     "echarts": "^5.6.0",
+    "jwt-decode": "^4.0.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
