feat: implementação dos containers docker e readme

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,14 @@
 FROM node:20.18.3 AS builder
-
 ENV NODE_ENV build
-
 RUN apt update && apt install -y openssl procps
-
-USER node
-
 WORKDIR /app
-
-COPY --chown=node:node . .
-
-RUN npx prisma generate && npm run build  
+COPY . .
+COPY .env.example .env
+RUN npx prisma generate && npm run build
 
 FROM node:20.18.3 AS runner
-
 ENV NODE_ENV production
-
 USER node
-
 WORKDIR /app
 
 COPY --from=builder --chown=node:node /app/.env ./
