--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,13 @@
 FROM node:20.18.3 AS builder
-
-ENV NODE_ENV build
-
+ENV NODE_ENV development
 RUN apt update && apt install -y openssl procps
-
-USER node
-
 WORKDIR /app
-
-COPY --chown=node:node . .
-
-USER root
-
-RUN npm install -g @quasar/cli
-
-USER node
-
-RUN quasar build
+COPY . .
+RUN npm install -g @quasar/cli \
+  && npm install \
+  && quasar build
 
 FROM nginx:alpine
-
 COPY --from=builder /app/dist/spa /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
